--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <color name="colorPrimary">#0066B3</color>
+    <color name="colorPrimaryAlpha50">#800066B3</color>
+    <color name="colorPrimaryDark">#0066B3</color>
+    <color name="colorAccent">#0066B3</color>
+    <color name="buttonTextColor">#ffffff</color>
+    <color name="splashScreenBackgroundColor">@color/colorPrimary</color>
+    <color name="splashScreenTextColor">#ffffff</color>
+    <color name="actionBarColor">#F3F3F3</color>
+    <color name="borderColor">#D3D3D3</color>
+    <color name="colorBlack">#000000</color>
+
+    <color name="textDark">#4A4A4A</color>
+    <color name="textMedium">#4A4A4A</color>
+    <color name="textLight">#B3828282</color>
+    <color name="editTextBackground">#F7F7F7</color>
+    <color name="editTextStroke">#282828</color>
+    <color name="infoBoxStroke">#B2B2B2</color>
+
+    <!-- Used by theme as default color for display and editable texts -->
+    <color name="text_default">#282828</color>
+    <color name="primarytextColor">#282828</color>
+
+    <!-- Primary color is used for headlines and links -->
+    <color name="primary" tools:keep="@color/primary">#282828</color>
+    <color name="primaryColor" tools:keep="@color/primaryColor">#282828</color>
+
+    <!-- background color for confirmation/continue button, which is usually placed at the bottom of a screen -->
+    <color name="proceed_button_background" tools:keep="@color/proceed_button_background">#0095CF</color>
+
+    <!-- "Wiederholen" button when a photo was taken in photo ident -->
+    <color name="photo_ident_retake_button_background" tools:keep="@color/photo_ident_retake_button_background">@color/text_default</color>
+
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -8,13 +41,13 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-<!--    <color name="default_circle_indicator_fill_color">#FFF95602</color>-->
-<!--    <color name="default_circle_indicator_page_color">#77F95602</color>-->
-<!--    <color name="default_circle_indicator_stroke_color">#FFDDDDDD</color>-->
-<!--    <color name="default_line_indicator_selected_color">#FF33B5E5</color>-->
-<!--    <color name="default_line_indicator_unselected_color">#FFBBBBBB</color>-->
-<!--    <color name="default_title_indicator_footer_color">#FF33B5E5</color>-->
-<!--    <color name="default_title_indicator_selected_color">#FFFFFFFF</color>-->
-<!--    <color name="default_title_indicator_text_color">#BBFFFFFF</color>-->
-<!--    <color name="default_underline_indicator_selected_color">#FF33B5E5</color>-->
+    <!--    <color name="default_circle_indicator_fill_color">#FFF95602</color>-->
+    <!--    <color name="default_circle_indicator_page_color">#77F95602</color>-->
+    <!--    <color name="default_circle_indicator_stroke_color">#FFDDDDDD</color>-->
+    <!--    <color name="default_line_indicator_selected_color">#FF33B5E5</color>-->
+    <!--    <color name="default_line_indicator_unselected_color">#FFBBBBBB</color>-->
+    <!--    <color name="default_title_indicator_footer_color">#FF33B5E5</color>-->
+    <!--    <color name="default_title_indicator_selected_color">#FFFFFFFF</color>-->
+    <!--    <color name="default_title_indicator_text_color">#BBFFFFFF</color>-->
+
 </resources>
